# copali-experiment

./: README.md  pyproject.toml
evaluation/: README.md
scripts/: __init__.py  vidore_evaluation.py  vidore_ndcg.py  visualize_vidore_results.py
